--- a/about-us.html
+++ b/about-us.html
@@ -18,136 +18,139 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
+.dbc148c2c4ca831b5cc29808b798215db{
+border: 1px solid #69869437;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f0eeea;
+}
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.w82749f917c99fd283b593e7b6a1ccb33 p,.w82749f917c99fd283b593e7b6a1ccb33 a,.w82749f917c99fd283b593e7b6a1ccb33 span,.w82749f917c99fd283b593e7b6a1ccb33 label{
+ul{
+list-style: circle;
+}
+.wd0eee85f1fecec60df195e50f9494d53 a{
+font-size:16px;
+}
+.we2d409993db0cd56f226fc3e3a165f77 p,.we2d409993db0cd56f226fc3e3a165f77 a,.we2d409993db0cd56f226fc3e3a165f77 span,.we2d409993db0cd56f226fc3e3a165f77 label{
 font-size:16px!important;
 }
-.navbar a{
-font-size: 18.2px!important;
-font-weight: bold;
-}
-.v88b10e352ac9e95ba74a4337a5dd7743{
-border: 1px solid #64818f32;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f7f5f1;
-}
 .nav-link{
-color: #000000!important;
+color: #000000;
 
 }
-footer{
-background:#131313;
-color:#ffffff;
+.z0f80cf082fd99d23229176f7f4bd8882:hover{
+box-shadow: 0 49.6px 49.7px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-.w82749f917c99fd283b593e7b6a1ccb33 a,.d843125b2cff6fcf0fedc507e6699d633 a{
-color:#050505!important;
+.wd0eee85f1fecec60df195e50f9494d53 p,.wd0eee85f1fecec60df195e50f9494d53 span,.wd0eee85f1fecec60df195e50f9494d53 label{
+font-size:16px!important;
+}
+.we2d409993db0cd56f226fc3e3a165f77 a,.wd0eee85f1fecec60df195e50f9494d53 a{
+color:#0b0b0b!important;
 text-decoration: underline !important;
-}
-.nav-item{
-padding-left:8.5px;
-padding-right:8.2px;
-padding-top:5.2px;
-padding-bottom:4.8px;
-}
-.d843125b2cff6fcf0fedc507e6699d633 a{
-font-size:16px;
 }
 footer *{
 font-size:16px !important;
 }
-.w11b2d2f1fed7edc7706b30cbd8ad5a18{
+.daa5eb53b15bd9639c6665afc0ed2bc19{
 background-color:#356369!important;
 border-color:#356369!important;
 color:#000000!important;
 }
-a{
-text-decoration: none!important;
-}
-.d843125b2cff6fcf0fedc507e6699d633 p,.d843125b2cff6fcf0fedc507e6699d633 span,.d843125b2cff6fcf0fedc507e6699d633 label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 15.2px 30.5px;
-border-radius: 0;
+a:hover{
+color:;background:!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.y8574fdb0f89df415ce37684a5563937a:hover{
-box-shadow: 0 50.2px 49.7px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+a{
+text-decoration: none!important;
+}
+footer{
+background:#0a0a0a;
+color:#ffffff;
 }
 html{
 scroll-behavior: smooth;
 }
-ul{
-list-style: circle;
+.btn-md{
+padding: 15.4px 29.7px;
+border-radius: 0;
+}
+.nav-item{
+padding-left:8.5px;
+padding-right:7.5px;
+padding-top:5px;
+padding-bottom:5.1px;
+}
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
 }
 </style>
 </head>
 <body>
      
 <nav class="navbar-expand-lg navbar">
-<a class="navbar-brand" href="https://beauty.netlify.app/index.html"  ><img alt="img/logo1.png" src="img/logo1.png"  width="150px" ></a>
+<a class="navbar-brand" href="https://beautyfan.netlify.app/index.html"  ><img alt="img/logo1.png" src="img/logo1.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center navbar-nav d-flex ml-auto"><li class="nav-item"><a class="nav-link x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/news.html"  >News</a></li>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="ml-auto navbar-nav align-items-center d-flex"><li class="nav-item"><a class="nav-link b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/news.html"  >News</a></li>
   
-<li class="nav-item  dropdown">
-<a class="x6df82e8f9b3767aaa27f03648f6a7e0d dropdown-toggle nav-link" href="https://beauty.netlify.app/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">VogueVanity Personal Care Weblog</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://beauty.netlify.app/index.html"  >VogueVanity Personal Care Weblog</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/skincare.html"  >Skincare</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/haircare.html"  >Haircare</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/oral-hygiene.html"  >Oral hygiene</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/nail-care.html"  >Nail care</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/hygiene-products.html"  >Hygiene products</a>
-  
-<li class="nav-item  dropdown">
-<a class="dropdown-toggle x6df82e8f9b3767aaa27f03648f6a7e0d nav-link" href="https://beauty.netlify.app/skincare-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Skincare</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://beauty.netlify.app/skincare-1.html"  >Skincare</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/cleansing.html"  >Cleansing</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/moisturizing.html"  >Moisturizing</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/sun-protection.html"  >Sun protection</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/antiaging-treatments.html"  >Antiaging treatments</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/acne-care.html"  >Acne care</a>
-  
-<li class="nav-item  dropdown">
-<a class="nav-link dropdown-toggle x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/haircare-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Haircare</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://beauty.netlify.app/haircare-1.html"  >Haircare</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/shampoo-and-conditioner.html"  >Shampoo and conditioner</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/styling-products.html"  >Styling products</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/hair-treatments.html"  >Hair treatments</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/scalp-care.html"  >Scalp care</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/hair-coloring.html"  >Hair coloring</a>
-  
-<li class="dropdown nav-item ">
-<a class="nav-link dropdown-toggle x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/oral-hygiene-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Oral hygiene</a>
+<li class=" nav-item dropdown">
+<a class="b96185cea106e4bc02fbe450297d92bc0 dropdown-toggle nav-link" href="https://beautyfan.netlify.app/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">VogueVanity Personal Care Weblog</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://beauty.netlify.app/oral-hygiene-1.html"  >Oral hygiene</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/tooth-brushing.html"  >Tooth brushing</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/flossing.html"  >Flossing</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/mouthwash.html"  >Mouthwash</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/dental-visits.html"  >Dental visits</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/teeth-whitening.html"  >Teeth whitening</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/index.html"  >VogueVanity Personal Care Weblog</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/skincare.html"  >Skincare</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/haircare.html"  >Haircare</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/oral-hygiene.html"  >Oral hygiene</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/nail-care.html"  >Nail care</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/hygiene-products.html"  >Hygiene products</a>
   
-<li class="dropdown nav-item ">
-<a class="x6df82e8f9b3767aaa27f03648f6a7e0d nav-link dropdown-toggle" href="https://beauty.netlify.app/guides.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Guides</a>
+<li class="dropdown  nav-item">
+<a class="nav-link b96185cea106e4bc02fbe450297d92bc0 dropdown-toggle" href="https://beautyfan.netlify.app/skincare-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Skincare</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://beauty.netlify.app/guides.html"  >Guides</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/nail-care-1.html"  >Nail care</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/manicures.html"  >Manicures</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/pedicures.html"  >Pedicures</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/nail-treatments.html"  >Nail treatments</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/nail-polish.html"  >Nail polish</a>
-<a class="dropdown-item" href="https://beauty.netlify.app/nail-health.html"  >Nail health</a>
-<li class="nav-item"><a class="nav-link x6df82e8f9b3767aaa27f03648f6a7e0d" rel=nofollow href="https://beauty.netlify.app/about-us.html">About Us</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/skincare-1.html"  >Skincare</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/cleansing.html"  >Cleansing</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/moisturizing.html"  >Moisturizing</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/sun-protection.html"  >Sun protection</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/antiaging-treatments.html"  >Antiaging treatments</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/acne-care.html"  >Acne care</a>
+  
+<li class="nav-item dropdown ">
+<a class="nav-link b96185cea106e4bc02fbe450297d92bc0 dropdown-toggle" href="https://beautyfan.netlify.app/haircare-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Haircare</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://beautyfan.netlify.app/haircare-1.html"  >Haircare</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/shampoo-and-conditioner.html"  >Shampoo and conditioner</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/styling-products.html"  >Styling products</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/hair-treatments.html"  >Hair treatments</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/scalp-care.html"  >Scalp care</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/hair-coloring.html"  >Hair coloring</a>
+  
+<li class="nav-item  dropdown">
+<a class="dropdown-toggle nav-link b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/oral-hygiene-1.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Oral hygiene</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://beautyfan.netlify.app/oral-hygiene-1.html"  >Oral hygiene</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/tooth-brushing.html"  >Tooth brushing</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/flossing.html"  >Flossing</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/mouthwash.html"  >Mouthwash</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/dental-visits.html"  >Dental visits</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/teeth-whitening.html"  >Teeth whitening</a>
+  
+<li class=" nav-item dropdown">
+<a class="nav-link dropdown-toggle b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/guides.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Guides</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://beautyfan.netlify.app/guides.html"  >Guides</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/nail-care-1.html"  >Nail care</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/manicures.html"  >Manicures</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/pedicures.html"  >Pedicures</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/nail-treatments.html"  >Nail treatments</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/nail-polish.html"  >Nail polish</a>
+<a class="dropdown-item" href="https://beautyfan.netlify.app/nail-health.html"  >Nail health</a>
+<li class="nav-item"><a class="b96185cea106e4bc02fbe450297d92bc0 nav-link" rel=nofollow href="https://beautyfan.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -160,7 +163,7 @@ list-style: circle;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 v88b10e352ac9e95ba74a4337a5dd7743">
+<div class="col-md-12 mb-3 dbc148c2c4ca831b5cc29808b798215db">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>VogueVanity</h4></a>
@@ -173,10 +176,10 @@ list-style: circle;
 <div class="col-lg-4">                 
 <div>
 <h1 class="pb-4">Contact Us</h1>
-<p>Email : <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="97d6fbf2eff6f9f3f2e5c5f8f8e3aed7f8e2e3fbf8f8fcb9f4f8fa">[email&#160;protected]</a></p>
-<p>Phone : 436-915-4084</p>
-<p>Address : 7391  Brook Lane</p>
-<p>, Tacoma, WA, 98402, USA.</p>
+<p>Email : CarterWhiteGlow1@hotmail.com</p>
+<p>Phone : 125-528-7821</p>
+<p>Address : 5974  Sunset Avenue</p>
+<p>, Richmond, VA, 23220, USA.</p>
 </div>
 </div>
 <div class="col-lg-8">
@@ -185,14 +188,14 @@ list-style: circle;
 </div>
 <footer>
 <div class="py-4 pt-5 container" >
-<div class="row"><div class="col-lg-3"><p><a class="x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="x6df82e8f9b3767aaa27f03648f6a7e0d" href="https://beauty.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<div class="row"><div class="col-lg-3"><p><a class="b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="b96185cea106e4bc02fbe450297d92bc0" href="https://beautyfan.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div></div>
 </div>
 </footer> 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">
+<script type="text/javascript">
 document.addEventListener('DOMContentLoaded', function() {
 var dropdowns = document.querySelectorAll('.dropdown-hover');
 function showDropdown() {
